added player2 text

--- a/proj1/app/src/main/res/layout/activity_open.xml
+++ b/proj1/app/src/main/res/layout/activity_open.xml
@@ -10,10 +10,11 @@
 
     <TextView
         android:id="@+id/welcome"
-        android:layout_width="165dp"
-        android:layout_height="42dp"
+        android:layout_width="212dp"
+        android:layout_height="89dp"
         android:gravity="center"
         android:text="@string/welcome"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -46,6 +47,35 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.399"
+        tools:targetApi="o" />
+
+    <TextView
+        android:id="@+id/player2text"
+        android:layout_width="132dp"
+        android:layout_height="43dp"
+        android:gravity="center"
+        android:text="@string/player2text"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/startButton"
+        app:layout_constraintHorizontal_bias="0.033"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.504" />
+
+    <EditText
+        android:id="@+id/player2name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:autofillHints="@string/player2text"
+        android:ems="10"
+        android:hint="@string/nameHint"
+        android:inputType="textPersonName"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/player2text"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.505"
         tools:targetApi="o" />
 
     <Button
