--- a/proj1/app/src/main/res/layout/activity_open.xml
+++ b/proj1/app/src/main/res/layout/activity_open.xml
@@ -82,11 +82,11 @@
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="332dp"
         android:text="@string/startButton"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player1name" />
+        app:layout_constraintTop_toBottomOf="@+id/player2name" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
