--- a/proj1/app/src/main/res/layout/activity_open.xml
+++ b/proj1/app/src/main/res/layout/activity_open.xml
@@ -10,14 +10,38 @@
 
     <TextView
         android:id="@+id/welcome"
-        android:layout_width="212dp"
-        android:layout_height="89dp"
+        android:layout_width="188dp"
+        android:layout_height="91dp"
+        android:layout_marginTop="4dp"
         android:gravity="center"
         android:text="@string/welcome"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="111dp"
+        android:layout_height="96dp"
+        android:contentDescription="@string/piece_desc"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/king_green" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="107dp"
+        android:layout_height="94dp"
+        android:contentDescription="@string/piece_desc"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/imageView"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/king_white" />
 
     <TextView
         android:id="@+id/player1text"
@@ -87,6 +111,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/player2name" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="130dp"
+        android:layout_height="109dp"
+        android:contentDescription="@string/piece_desc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/spartan_green" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="120dp"
+        android:layout_height="114dp"
+        android:contentDescription="@string/piece_desc"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/spartan_white" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
