--- a/proj1/app/src/main/res/layout/activity_open.xml
+++ b/proj1/app/src/main/res/layout/activity_open.xml
@@ -106,6 +106,7 @@
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onStart"
         android:text="@string/startButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
