--- a/proj1/app/src/main/res/layout/activity_game.xml
+++ b/proj1/app/src/main/res/layout/activity_game.xml
@@ -8,11 +8,12 @@
     tools:context=".GameActivity">
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/playerTurn"
         android:layout_width="123dp"
         android:layout_height="53dp"
         android:gravity="center"
         android:text="@string/nameHint"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
