--- a/proj1/app/src/main/res/layout/activity_game.xml
+++ b/proj1/app/src/main/res/layout/activity_game.xml
@@ -26,7 +26,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/resignButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:onClick="onResign"
@@ -35,7 +35,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/doneButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/doneButton"
