--- a/proj1/app/src/main/res/layout/activity_open.xml
+++ b/proj1/app/src/main/res/layout/activity_open.xml
@@ -103,6 +103,17 @@
         tools:targetApi="o" />
 
     <Button
+        android:id="@+id/dialogueButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/dialogue"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.2"
+        app:layout_constraintStart_toEndOf="@+id/startButton"
+        app:layout_constraintTop_toBottomOf="@+id/player2name" />
+
+    <Button
         android:id="@+id/startButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
