--- a/proj1/app/src/main/res/layout/activity_game.xml
+++ b/proj1/app/src/main/res/layout/activity_game.xml
@@ -38,6 +38,7 @@
         android:id="@+id/doneButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="onDone"
         android:text="@string/doneButton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
