--- a/proj2/proj1/app/src/main/res/layout/activity_create.xml
+++ b/proj2/proj1/app/src/main/res/layout/activity_create.xml
@@ -2,132 +2,106 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relativeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OpenActivity">
-
+    tools:context=".CreateActivity">
 
     <TextView
-        android:id="@+id/welcome"
-        android:layout_width="188dp"
-        android:layout_height="91dp"
-        android:layout_marginTop="4dp"
+        android:id="@+id/register"
+        android:layout_width="191dp"
+        android:layout_height="71dp"
         android:gravity="center"
-        android:text="@string/welcome"
+        android:text="@string/createBtn"
         android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/userIDC1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="187dp"
-        android:layout_height="71dp"
-        android:gravity="center"
-        android:text="@string/loginBtn"
-        android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/userID"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="111dp"
-        android:layout_height="96dp"
+        android:id="@+id/imageView5"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:contentDescription="@string/piece_desc"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/king_green" />
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="107dp"
-        android:layout_height="94dp"
+        android:id="@+id/imageView6"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:contentDescription="@string/piece_desc"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/king_white" />
 
     <EditText
-        android:id="@+id/userID"
+        android:id="@+id/userIDC1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autofillHints="@string/userHint"
         android:ems="10"
         android:hint="@string/userHint"
+        android:autofillHints="@string/userHint"
         android:inputType="textPersonName"
-        app:layout_constraintBottom_toTopOf="@+id/passWord"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.346" />
 
     <EditText
-        android:id="@+id/passWord"
+        android:id="@+id/passWordC1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:autofillHints="@string/passwordHint"
         android:ems="10"
         android:hint="@string/passwordHint"
+        android:autofillHints="@string/passwordHint"
         android:inputType="textPassword"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/welcome" />
+        app:layout_constraintTop_toBottomOf="@+id/userIDC1" />
 
-    <Button
-        android:id="@+id/dialogueButton"
+    <EditText
+        android:id="@+id/passWordC2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/dialogue"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:ems="10"
+        android:hint="@string/passConfirm"
+        android:autofillHints="@string/passwordHint"
+        android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.2"
-        app:layout_constraintStart_toEndOf="@+id/createButton"
-        app:layout_constraintTop_toBottomOf="@+id/passWord" />
-
-    <Button
-        android:id="@+id/loginBttn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/loginBtn"
-        app:layout_constraintBottom_toTopOf="@+id/createButton"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passWord" />
+        app:layout_constraintTop_toBottomOf="@+id/passWordC1" />
 
     <Button
-        android:id="@+id/createButton"
+        android:id="@+id/registerBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/createBtn"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/passWord" />
+        app:layout_constraintTop_toBottomOf="@+id/passWordC2" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="130dp"
-        android:layout_height="109dp"
+        android:id="@+id/imageView7"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:contentDescription="@string/piece_desc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/spartan_green" />
 
     <ImageView
-        android:id="@+id/imageView4"
-        android:layout_width="120dp"
-        android:layout_height="114dp"
+        android:id="@+id/imageView8"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:contentDescription="@string/piece_desc"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/spartan_white" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
