Revert "Merge branch 'master' of https://github.com/pastyrn1/Checkers_CSE476"
This reverts commit 91e73d5f53da57bdf0c290c0010eed5472c8153e, reversing
changes made to 7d4ae95f5bc92a959099503737ab27048e65a8a5.

--- a/Project2/app/src/main/res/layout/user_login.xml
+++ b/Project2/app/src/main/res/layout/user_login.xml
@@ -30,9 +30,7 @@
         android:layout_centerInParent="false"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:autofillHints="@string/userHint"
-        android:hint="@string/userHint"
-        android:inputType="textPersonName" />
+        android:inputType="text" />
 
     <EditText
         android:id="@+id/editPw"
@@ -43,7 +41,5 @@
         android:layout_centerInParent="false"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="@string/passwordHint"
-        android:autofillHints="@string/passwordHint"
-        android:inputType="textPassword" />
+        android:inputType="text" />
 </RelativeLayout>
