--- a/Project2/app/src/main/res/layout/user_login.xml
+++ b/Project2/app/src/main/res/layout/user_login.xml
@@ -41,5 +41,16 @@
         android:layout_centerInParent="false"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:inputType="text" />
+        android:hint="@string/passwordHint"
+        android:autofillHints="@string/passwordHint"
+        android:inputType="textPassword" />
+
+    <CheckBox
+        android:id="@+id/checkBox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/pwTextView"
+        android:layout_alignEnd="@id/editPw"
+        android:layout_marginTop="5dp"
+        android:text="@string/checkbox" />
 </RelativeLayout>
