updated login and gameactivity

--- a/Project2/app/src/main/res/layout/activity_login.xml
+++ b/Project2/app/src/main/res/layout/activity_login.xml
@@ -96,7 +96,7 @@
         android:id="@+id/loginBttn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/loginBtn"
+        android:text="@string/login"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/checkBox2" />
