--- a/Project2/app/src/main/res/layout/activity_game.xml
+++ b/Project2/app/src/main/res/layout/activity_game.xml
@@ -19,6 +19,7 @@
 
     <view
         android:id="@+id/gameView"
+        class="edu.msu.pastyrn1.project2.GameView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
